[package]
name = "ipld_car"
version = "0.1.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"

[dependencies]
serde_cbor = { git = "https://github.com/vmx/cbor", branch = "wip-make-hamt-pass" }
cid = { git = "https://github.com/multiformats/rust-cid", rev = "4b2f7f9" }
blockstore = { path = "../../lib/blockstore" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
futures = "0.3.5"
integer-encoding = { version = "3.0", features = ["futures_async"] }
fvm_shared = { path = "../../shared" }

[dev-dependencies]
async-std = { version = "1.9", features = ["attributes"] }
